--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,12 @@ body {
   }
 
   :root{
-      --font-color: rgb(8, 155, 155);
+      --bars-color: rgb(233, 195, 114);
       --background-color:  rgb(94, 182, 156);
+      --players-background: rgb(221, 41, 152);
+      --section-color: rgba(216, 199, 42, 0.815);
   }
+
 
   .main-container{
       display: flex;
@@ -22,23 +25,32 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 6% 1% 0% 1%;
-    width: 35%;
+    padding: 3%;
+    width: 70vh;
   }
 
+  .game-name{
+    color: cornsilk;
+    font-size: 65px;
+  }
+
+  .player1-name, .player2-name, .p1-win-count, .p2-win-count{
+      margin-bottom: 4%;
+  }
   .container{
     align-self: center;
     border-radius: 25px;
-    /* background-color: rgb(173, 163, 19); */
     padding: 3%;
     margin: 5%;
 }
 .game-board{
-    background: var( --font-color);
+    background: var(--bars-color);
     display: grid;
     grid-template-columns: repeat(3, 1fr );
     grid-template-rows: repeat(3, 1fr );
     grid-gap: 6px;
+    justify-self: center;
+    justify-items: center;
 
 }
 
@@ -47,12 +59,12 @@ body {
     cursor: pointer;
     font-size: 2em;
     background-color: var( --background-color);
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    width: 90px;
 }
 
 .left-section,  .rigth-section{
-    background-color: coral;
+    background-color: var( --section-color);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -63,51 +75,42 @@ body {
 
   .p1-games, .p2-games{
       display: grid;
-      background-color: cornflowerblue;
+      background-color: var( --players-background);
       height: 85vh;
       grid-template-columns: repeat(3, 1fr );
       grid-template-rows: repeat(6, 1fr );
       overflow: scroll;
-      margin: 5%;
+      margin: 2% 1% 2% 1%;
+      /* width: 60vh; */
   }
 
   .main-header{
     padding: 6% 1% 8% 1%;
 }
 
- .mini-board {
-    display: grid;
-    align-self: center;
-    grid-template-columns: repeat(3, 32px );
-    grid-template-rows: repeat(3, 35px);
-    background-color: rgb(252, 245, 157);
-    height: 16vh;
-    width: 15vh;
-    margin: 0%;
-    font-size: 10px;
- }
-
  .player-container{
     border-radius: 3px;
     background-color: cornflowerblue;
-    padding: 3%;
-    margin: 5%;
+    /* padding: 5%; */
+    margin: 7%;
     /* height: 100px;
     width: 100px; */
 }
 
 .mini-game-board{
-    background: var( --font-color);
+    background: var( --bars-color);
     display: grid;
-    grid-template-columns: repeat(3, 28px);
-    grid-template-rows: repeat(3, 28px);
+    grid-template-columns: repeat(3, 30px);
+    grid-template-rows: repeat(3, 30px);
     grid-gap: 1px;
-
+    width: 93px;
+    align-content: center;
+    
 }
 .min-cell {
-    font-size: 15px;
+    font-size: 13px;
     background-color: var( --background-color);
     height: 25px;
     width: 25px;
-    justify-self: end;
+    margin-top: 3px;
 }
