--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     box-sizing: border-box;
     font-family: 'Permanent Marker', cursive;
+    /* height: 100vh; */
   }
 
   :root{
@@ -38,6 +39,11 @@ body {
   .player1-name, .player2-name, .p1-win-count, .p2-win-count{
       margin-bottom: 4%;
   }
+
+  .player1-token, .player2-token{
+    font-size: 2em;
+}
+
   .container{
     align-self: center;
     border-radius: 25px;
@@ -78,12 +84,10 @@ body {
       display: grid;
       background-color: var( --players-background);
       height: 55vh;
-      /* grid-template-columns: repeat(3, 1fr ); */
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(6, 1fr);
       overflow: scroll;
       margin: 2% 1% 2% 1%;
-      /* width: 60vh; */
   }
 
   .main-header{
@@ -92,7 +96,6 @@ body {
 
  .player-container{
     border-radius: 3px;
-    /* background-color: cornflowerblue; */
     margin: 7%;
     justify-self: center;
     align-self: center;
@@ -103,22 +106,55 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 30px);
     grid-template-rows: repeat(3, 30px);
-    /* grid-gap: 1px; */
     width: 93px;
     align-content: center;
     
 }
 .min-cell {
-    font-size: 13px;
+    font-size: 20px;
     background-color: var( --background-color);
     height: 25px;
     width: 25px;
-    margin-top: 3px; */
+    margin-top: 3px; 
     align-self: center;
     justify-self: center;
 }
 
+@media only screen and (min-width: 1200px){
+    .player1-token, .player2-token{
+        font-size: 2em;
+    }
+
+    .player1-name, .player2-name, .p1-win-count, .p2-win-count {
+        font-size: 1.5em;
+        margin-bottom: 4%;
+    }
+
+    .p1-games, .p2-games {
+        grid-template-columns: repeat(2, 1fr);   
+    }
+
+    .mini-game-board {
+        grid-template-columns: repeat(3, 45px);
+        grid-template-rows: repeat(3, 45px);
+        width: 4em;
+        height: 4em;
+    }
+
+    .min-cell{
+        font-size: 27px;
+        height: 37px;
+        width: 37px;
+    }
+
+}
+
 @media only screen and (min-width: 1500px){
+
+    .player1-name, .player2-name, .p1-win-count, .p2-win-count {
+        font-size: 2em;
+    }
+
     .p1-games, .p2-games{
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 0px;
@@ -161,7 +197,7 @@ body {
     }
 
     .min-cell {
-        font-size: 23px;
+        font-size: 1.5em;
         background-color: var( --background-color);
         height: 50px;
         width: 50px;
