--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,21 @@
+:root{
+    --bars-color: rgb(233, 195, 114);
+    --background-color:  rgb(94, 182, 156);
+    --players-background: rgb(221, 41, 152);
+    --section-color: rgba(216, 199, 42, 0.815);
+}
+
 body {
     box-sizing: border-box;
     font-family: 'Permanent Marker', cursive;
-    /* height: 100vh; */
   }
-
-  :root{
-      --bars-color: rgb(233, 195, 114);
-      --background-color:  rgb(94, 182, 156);
-      --players-background: rgb(221, 41, 152);
-      --section-color: rgba(216, 199, 42, 0.815);
-  }
-
 
   .main-container{
-      display: flex;
-      flex-direction: row;
-      height: 100vh;
-      text-align: center;
-      font-size: 2em;
-      /* width: 150%; */
-      /* padding: 1% 1% 1% 1%; */
+    display: flex;
+    font-size: 2em;
+    flex-direction: row;
+    height: 100vh;
+    text-align: center;
   }
 
   .center-section{
@@ -28,16 +24,16 @@ body {
     flex-direction: column;
     height: 100%;
     padding: 3%;
-    width: 70vh;
+    width: 70%;
   }
 
   .game-name{
     color: cornsilk;
-    font-size: 65px;
+    font-size: 2em;
   }
 
   .player1-name, .player2-name, .p1-win-count, .p2-win-count{
-      margin-bottom: 4%;
+    margin-bottom: 4%;
   }
 
   .player1-token, .player2-token{
@@ -46,7 +42,6 @@ body {
 
   .container{
     align-self: center;
-    border-radius: 25px;
     padding: 3%;
     margin: 5%;
 }
@@ -62,12 +57,11 @@ body {
 }
 
 .cell {
-
     cursor: pointer;
     font-size: 2em;
     background-color: var( --background-color);
-    height: 90px;
-    width: 90px;
+    height: 1.5em;
+    width: 1.5em;
 }
 
 .left-section,  .rigth-section{
@@ -81,13 +75,13 @@ body {
 }
 
   .p1-games, .p2-games{
-      display: grid;
-      background-color: var( --players-background);
-      height: 55vh;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(6, 1fr);
-      overflow: scroll;
-      margin: 2% 1% 2% 1%;
+    display: grid;
+    background-color: var( --players-background);
+    height: 50%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    overflow: scroll;
+    margin: 2% 1% 2% 1%;
   }
 
   .main-header{
@@ -95,7 +89,7 @@ body {
 }
 
  .player-container{
-    border-radius: 3px;
+    /* border-radius: 3px; */
     margin: 7%;
     justify-self: center;
     align-self: center;
@@ -104,18 +98,18 @@ body {
 .mini-game-board{
     background: var( --bars-color);
     display: grid;
-    grid-template-columns: repeat(3, 30px);
-    grid-template-rows: repeat(3, 30px);
-    width: 93px;
+    grid-template-columns: repeat(3, 1em);
+    grid-template-rows: repeat(3, 1em);
+    width: 100%;
     align-content: center;
+    justify-content: center;
     
 }
 .min-cell {
     font-size: 20px;
     background-color: var( --background-color);
-    height: 25px;
-    width: 25px;
-    margin-top: 3px; 
+    height: 1.3em;
+    width: 1.3em; 
     align-self: center;
     justify-self: center;
 }
@@ -131,20 +125,22 @@ body {
     }
 
     .p1-games, .p2-games {
-        grid-template-columns: repeat(2, 1fr);   
+        grid-template-columns: repeat(2, 1fr); 
+        padding-top: 13%;  
     }
 
     .mini-game-board {
-        grid-template-columns: repeat(3, 45px);
-        grid-template-rows: repeat(3, 45px);
-        width: 4em;
+        grid-template-columns: repeat(3, 1.3em);
+        grid-template-rows: repeat(3, 1.3em);
         height: 4em;
+        justify-content: center;
+        width: 4em;
     }
 
     .min-cell{
         font-size: 27px;
-        height: 37px;
-        width: 37px;
+        height: 1.4em;
+        width: 1.4em;
     }
 
 }
@@ -179,20 +175,13 @@ body {
     }
 
     .player-container {
-        /* border-radius: 3px; */
-        /* background-color: cornflowerblue; */
         margin: 7%;
-        /* justify-self: center; */
-        /* align-self: center; */
     }
+
     .mini-game-board {
-        /* background: var( --bars-color); */
-        /* display: grid; */
         grid-template-columns: repeat(3, 65px);
         grid-template-rows: repeat(3, 65px);
-        /* grid-gap: 1px; */
         width: 6em;
-        /* align-content: center; */
         height: 6em;
     }
 
@@ -202,7 +191,6 @@ body {
         height: 50px;
         width: 50px;
         margin-top: 3px;
-        */: ;
         align-self: center;
         justify-self: center;
     }
@@ -216,27 +204,20 @@ body {
 }
 
 @media only screen and (max-width: 600px){
-    body{
-        width: 600px;
-    }
-
     .game-board{
         grid-gap: 3px;
     }
 
     .cell {
-        /* cursor: pointer; */
         font-size: 1em;
-        /* background-color: var( --background-color); */
         height: 80px;
         width: 80px;
     }
 
     .p1-games, .p2-games {
         background-color: var( --players-background);
-        height: 75vh;
+        height: 75%;
         grid-template-columns: repeat(1, 1fr );
-        overflow: scroll;
         padding: 6%;
     }
 
@@ -250,25 +231,5 @@ body {
 @media only screen and (max-width: 400px){
     body{
         width: 400px;
-    }
-}
-
-@media only screen and (min-width: 1500px){
-    .p1-games, .p2-games{
-        grid-template-columns: repeat(3, 40px);
-        grid-template-rows: repeat(3, 40px);
-        grid-gap: 0px;
-        width: 115px;
-        align-content: center;
-    }
-
-    .mini-game-board {
-        background: var( --bars-color);
-        display: grid;
-        grid-template-columns: repeat(3, 40px);
-        grid-template-rows: repeat(3, 40px);
-        grid-gap: 1px;
-        width: 93px;
-        align-content: center;
     }
 }
